Fixing aligning of inputs inside a form

--- a/omod/src/main/compass/sass/base.scss
+++ b/omod/src/main/compass/sass/base.scss
@@ -149,7 +149,8 @@ form {
 
   label {
     display: block;
-    text-align: left
+    text-align: left;
+    margin-bottom: 5px;
   }
 
   p {
